refactor(UserQueryService): .toList() 사용